--- a/Документация/Инструменты разработки и Системная Архитектура.md
+++ b/Документация/Инструменты разработки и Системная Архитектура.md
@@ -83,25 +83,29 @@
 4.  DAL взаимодействует с базой данных SQL Server для получения или изменения данных.
 5.  Данные возвращаются через DAL и BLL в UI для отображения пользователю.
 
-### 3.6. Диаграмма классов (БД)
+### 3.6. UseCase диаграмма
+
+![UseCase диаграмма](https://github.com/Aragon1898/NEW-SportSectionWPFapp-V2.0/blob/d6bc104e3650c44034040638c6ee759a132eb2ff/%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F/%D0%94%D0%B8%D0%B0%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D1%8B/UseCase.PNG)
+
+### 3.7. Диаграмма классов (БД)
 
 ![Диаграмма классов](https://github.com/Aragon1898/NEW-SportSectionWPFapp-V2.0/blob/25b800d518cb6ac8ce3cf8f96e5e565a55944503/%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F/%D0%94%D0%B8%D0%B0%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D1%8B/%D0%94%D0%B8%D0%B0%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B0%20%D0%9A%D0%BB%D0%B0%D1%81%D1%81%D0%BE%D0%B2.jpg)
 
-### 3.7. Диаграммы последовательности
+### 3.8. Диаграммы последовательности
 
-#### **3.7.1. Просмотр достижений (Участник)**
+#### **3.8.1. Просмотр достижений (Участник)**
 
 ![Просмотр достижений (Участник)](https://github.com/Aragon1898/NEW-SportSectionWPFapp-V2.0/blob/25b800d518cb6ac8ce3cf8f96e5e565a55944503/%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F/%D0%94%D0%B8%D0%B0%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D1%8B/%D0%A0%D0%B0%D0%B1%D0%BE%D1%82%D0%B0%20%D0%B8%20%D0%BF%D0%BE%D1%81%D0%BB%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%D1%81%D1%82%D1%8C%20(%D0%9F%D1%80%D0%BE%D1%81%D0%BC%D0%BE%D1%82%D1%80%20%D0%B4%D0%BE%D1%81%D1%82%D0%B8%D0%B6%D0%B5%D0%BD%D0%B8%D0%B9%20(%D0%A3%D1%87%D0%B0%D1%81%D1%82%D0%BD%D0%B8%D0%BA)).PNG)
 
-#### **3.7.2. Регистрация нового участника (Администратор)**
+#### **3.8.2. Регистрация нового участника (Администратор)**
 
 ![Регистрация нового участника (Администратор)](https://github.com/Aragon1898/NEW-SportSectionWPFapp-V2.0/blob/25b800d518cb6ac8ce3cf8f96e5e565a55944503/%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F/%D0%94%D0%B8%D0%B0%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D1%8B/%D0%A0%D0%B0%D0%B1%D0%BE%D1%82%D0%B0%20%D0%B8%20%D0%BF%D0%BE%D1%81%D0%BB%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%D1%81%D1%82%D1%8C%20(%D0%A0%D0%B5%D0%B3%D0%B8%D1%81%D1%82%D1%80%D0%B0%D1%86%D0%B8%D1%8F%20%D0%BD%D0%BE%D0%B2%D0%BE%D0%B3%D0%BE%20%D1%83%D1%87%D0%B0%D1%81%D1%82%D0%BD%D0%B8%D0%BA%D0%B0%20(%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B0%D1%82%D0%BE%D1%80)).PNG)
 
-#### **3.7.3. Составление расписания (Тренер)**
+#### **3.8.3. Составление расписания (Тренер)**
 
 ![Составление расписания (Тренер)](https://github.com/Aragon1898/NEW-SportSectionWPFapp-V2.0/blob/25b800d518cb6ac8ce3cf8f96e5e565a55944503/%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F/%D0%94%D0%B8%D0%B0%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D1%8B/%D0%A0%D0%B0%D0%B1%D0%BE%D1%82%D0%B0%20%D0%B8%20%D0%BF%D0%BE%D1%81%D0%BB%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%D1%81%D1%82%D1%8C%20(%D0%A1%D0%BE%D1%81%D1%82%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5%20%D1%80%D0%B0%D1%81%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D1%8F%20(%D0%A2%D1%80%D0%B5%D0%BD%D0%B5%D1%80)).PNG)
 
-#### **3.7.4. Отметка посещаемости (Тренер)**
+#### **3.8.4. Отметка посещаемости (Тренер)**
 
 ![Отметка посещаемости (Тренер)](https://github.com/Aragon1898/NEW-SportSectionWPFapp-V2.0/blob/25b800d518cb6ac8ce3cf8f96e5e565a55944503/%D0%94%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D1%8F/%D0%94%D0%B8%D0%B0%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D1%8B/%D0%A0%D0%B0%D0%B1%D0%BE%D1%82%D0%B0%20%D0%B8%20%D0%BF%D0%BE%D1%81%D0%BB%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%D1%81%D1%82%D1%8C%20(%D0%9E%D1%82%D0%BC%D0%B5%D1%82%D0%BA%D0%B0%20%D0%BF%D0%BE%D1%81%D0%B5%D1%89%D0%B0%D0%B5%D0%BC%D0%BE%D1%81%D1%82%D0%B8%20(%D0%A2%D1%80%D0%B5%D0%BD%D0%B5%D1%80)).PNG)
 
